[gd_scene load_steps=16 format=3 uid="uid://dau21p6lakbxd"]

[ext_resource type="Script" uid="uid://2oqrv4nwmpgn" path="res://scripts/player/mage.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://cut01yvoydgvs" path="res://assets/sprites/player/el mago castro.png" id="2_gjx5d"]
[ext_resource type="Texture2D" uid="uid://nb37s1avh63b" path="res://assets/sprites/ui/focus.png" id="3_7apep"]
[ext_resource type="AudioStream" uid="uid://by6r6frnv3ss4" path="res://assets/audio/spell_on_cooldown.wav" id="4_miwkq"]
[ext_resource type="Texture2D" uid="uid://cvueinhl8u4al" path="res://assets/sprites/ui/penalty.png" id="5_e2dau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjx5d"]
size = Vector2(640, 322)

[sub_resource type="AtlasTexture" id="AtlasTexture_miwkq"]
atlas = ExtResource("3_7apep")
region = Rect2(0, 0, 34, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2dau"]
atlas = ExtResource("3_7apep")
region = Rect2(34, 0, 34, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_40wgc"]
atlas = ExtResource("3_7apep")
region = Rect2(68, 0, 34, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_saoyv"]
atlas = ExtResource("3_7apep")
region = Rect2(102, 0, 34, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_qck6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_miwkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2dau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40wgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saoyv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_saoyv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.31066862]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.31066862]
}

[sub_resource type="Animation" id="Animation_e2dau"]
resource_name = "cast_ready"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.275),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_40wgc"]
resource_name = "penalty"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.9, 0.9), Vector2(0.6, 0.6), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.33, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.65, 0.65), Vector2(0.2, 0.2), Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.12, 0.19143216, 0.34534746, 0.5050346, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.31066862, -0.15533431, 0.6195919, -0.7766715, -0.15533431]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1510294, 0.28955317, 0.51465434),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.31066862, 0.46425757, -0.31066862, 0.4642575810304921]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qck6w"]
_data = {
&"RESET": SubResource("Animation_saoyv"),
&"cast_ready": SubResource("Animation_e2dau"),
&"penalty": SubResource("Animation_40wgc")
}

[node name="Mage" type="Node2D"]
script = ExtResource("1_v6fml")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gjx5d")
region_enabled = true
region_rect = Rect2(11, 12, 41, 47)

[node name="LeftHand" type="Marker2D" parent="."]
position = Vector2(24, -8)

[node name="RightHand" type="Marker2D" parent="."]
position = Vector2(-24, -8)

[node name="WatchZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WatchZone"]
position = Vector2(0, 151)
shape = SubResource("RectangleShape2D_gjx5d")

[node name="Focus" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qck6w")
autoplay = "default"
frame_progress = 0.9480564
offset = Vector2(0, -8)

[node name="SpellSpawnpoint" type="Marker2D" parent="."]
position = Vector2(0, 48)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_miwkq")
bus = &"SFX"

[node name="Penalty" type="Node2D" parent="."]
z_index = 10
position = Vector2(19, -17)
rotation = 0.41296262
scale = Vector2(0.7, 0.7)

[node name="Sprite1" type="Sprite2D" parent="Penalty"]
position = Vector2(7.9999995, -7.9999995)
rotation = 0.31066862
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_e2dau")

[node name="Sprite2" type="Sprite2D" parent="Penalty"]
position = Vector2(24, 8)
rotation = -0.31066862
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_e2dau")

[node name="PenaltyAnimator" type="AnimationPlayer" parent="Penalty"]
libraries = {
&"": SubResource("AnimationLibrary_qck6w")
}
